styles.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

@font-face {
  font-family: 'Kaushan Script';
  src: url('fonts/Kaushan_Script/KaushanScript-Regular.ttf') format('truetype');
  font-weight: 400;
  font-style: normal;
}

.kaushan-script-regular {
  font-family: 'Kaushan Script', cursive;
  font-weight: 400;
  font-style: normal;
}

html {
  scroll-behavior: smooth;
  font-size: 16px;
  line-height: 1.8;
}

body {
  font-family: 'Times New Roman', Times, serif;
  background: linear-gradient(hsl(50, 10%, 90%), hsl(50, 10%, 80%));
  min-height: max(100h, fit-content);
  max-width: 100vw;
  width: 100vw;
}

main#main {
  padding: 4rem 1rem;
}

#title {
  text-align: center;
  margin: 4rem 0;
  font-size: 4em;
  color: hsla(120, 20%, 35%, 1);
  text-shadow: 0 0 0 hsla(120, 100%, 25%, 0);
  transition: text-shadow 0.3s ease-in;
}

#title:hover {
  text-shadow: 4px 4px 26px hsla(55, 100%, 50%, 0.4);
}

img#image {
  object-fit: cover;
  max-width: 100%;
  max-height: 500px;
  margin: 0 auto;
  display: block;
}
#img-caption {
  text-align: center;
}

#tribute-info {
  width: 80%;
  max-width: 600px;
  margin: 4rem auto;
  font-size: 1.4rem;
  display: flex;
  flex-direction: column;
  gap: 2rem;
}

#tribute-info h3 {
  font-size: 1.5em;
}

#tribute-info ul {
  list-style: none;
  line-height: 1.8rem;
  
}

#tribute-info ul > li {
  border-left: 2px solid purple;
  padding: 10px;
  position: relative;
  display: inline-block;
  transition: all 0.3s ease-in;
}

#tribute-info ul > li:hover,
#tribute-info ul > li:active,
#tribute-info ul > li:focus {
  background-color: hsl(50, 40%, 75%);
}

#tribute-info ul > li::before {
  content: attr(data-year);
  color: hsl(120, 10%, 30%);
  font-family: Arial, Helvetica, sans-serif;
  top: 1px;
  left: -200px;
  width: 190px;
  display: inline-block;
  position: absolute;
  text-align: right;
  padding-top: 10px;
  box-sizing: border-box;
  font-size: 2rem;
  font-weight: 700;
}

blockquote {
  padding: 4rem;
  background: hsla(50, 32%, 60%, 0.5);
  color: hsl(50, 42%, 27%);
  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
  position: relative;
  font-size: 1.3em;
}

blockquote::before {
  content: '‟';
  font-size: 12em;
  position: absolute;
  top: -150px;
  left: 15px;
  color: hsl(50, 42%, 50%);
  z-index: -1;
}

footer#page-footer {
  min-height: 20vh;
  display: flex;
  justify-content: center;
  align-items: center;
  background: linear-gradient(hsl(50, 12%, 60%), hsl(50, 12%, 40%));
  font-size: 1.5em;
}

#tribute-link {
  display: block;
  color: hsl(50, 42%, 30%);
  text-decoration: none;
  font-weight: bold;
  font-family: Arial, Helvetica, sans-serif;
  text-align: center;
  margin: 20px auto;
  font-size: 1.4em;
}

#tribute-link:hover {
  text-decoration: underline;
}

